--- a/app/views/notes-tool-3-0/notes.html
+++ b/app/views/notes-tool-3-0/notes.html
@@ -44,7 +44,8 @@
 
 			{{govukButton({
 				text: "Add an audio file to transcribe",
-				classes: "govuk-button--secondary govuk-!-margin-bottom-8"
+				classes: "govuk-button--secondary govuk-!-margin-bottom-8",
+				href: "not-built-yet"
 			})}}
 
 			<p class="govuk-!-margin-bottom-0">
