--- a/app/views/notes-tool-3-0/select-case.html
+++ b/app/views/notes-tool-3-0/select-case.html
@@ -34,27 +34,27 @@
 				},
 				items: [
 				{
-					value: "Child A",
-					text: "Child A",
+					value: "Ella Jones",
+					text: "Ella Jones",
 					hint:
 					{
-						text: "Born 23 January 2010 (x years old)"
+						text: "Born 23 January 2010 (11 years old)"
 					}
 				},
 				{
-					value: "Child B",
-					text: "Child B",
+					value: "Alex Peters",
+					text: "Alex Peters",
 					hint:
 					{
-						text: "Born 1 August 2016 (x years old)"
+						text: "Born 1 August 2016 (4 years old)"
 					}
 				},
 				{
-					value: "Child C",
-					text: "Child C",
+					value: "Julia White",
+					text: "Julia White",
 					hint:
 					{
-						text: "Born 3 March 2011 (x years old)"
+						text: "Born 3 March 2011 (9 years old)"
 					}
 				}
 				]
