--- a/app/views/notes-tool-3-0/add-family-member.html
+++ b/app/views/notes-tool-3-0/add-family-member.html
@@ -35,24 +35,24 @@
 				},
 				items: [
 				{
-					value: "Family member A",
-					text: "Family member A",
+					value: "Alice White",
+					text: "Alice White",
 					hint:
 					{
 						text: "Sister, 2 years old"
 					}
 				},
 				{
-					value: "Family member B",
-					text: "Family member B",
+					value: "Jenny Jones",
+					text: "Jenny Jones",
 					hint:
 					{
 						text: "Mum, 38 years old"
 					}
 				},
 				{
-					value: "Family member C",
-					text: "Family member C",
+					value: "Arthur Peters",
+					text: "Arthur Peters",
 					hint:
 					{
 						text: "Dad, 38 years old"
