--- a/app/views/notes-tool-3-0/start.html
+++ b/app/views/notes-tool-3-0/start.html
@@ -18,18 +18,21 @@
 		</p>
 
 		<p>
-			You'll only be able to use this service if your Local authority is part of this Alpha.
-		</p>
-
-		<p>
 			You can:
 		</p>
 
 		<ul class="govuk-list govuk-list--bullet">
-			<li>thing 1</li>
-			<li>thing 2</li>
-			<li>thing 3</li>
+			<li>record events</li>
+			<li>see a timeline of events</li>
+			<li>attach photos and other files</li>
 		</ul>
+
+		<h2 class="govuk-heading-m">
+			Before you start
+		</h2>
+		<p>
+			You'll only be able to use this service if your Local authority is part of this Alpha.
+		</p>
 
 		<p>
 			You must use your local authority email address to access this service.
@@ -37,6 +40,7 @@
 
 		<p>
 			{{govukButton({
+				classes: "govuk-!-margin-top-4",
 				text: "Start now",
 				href: "email-address",
 				isStartButton: true
