--- a/app/views/notes-tool-3-0/event.html
+++ b/app/views/notes-tool-3-0/event.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "./layout_no-gov.html" %}
 
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
