--- a/app/views/notes-tool-3-0/other-family-present.html
+++ b/app/views/notes-tool-3-0/other-family-present.html
@@ -1,5 +1,5 @@
 
-{% extends "layout.html" %}
+{% extends "./layout_no-gov.html" %}
 
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
