--- a/app/views/notes-tool-3-0/confirmation-page.html
+++ b/app/views/notes-tool-3-0/confirmation-page.html
@@ -2,7 +2,7 @@
 {% extends "./layout_no-gov.html" %}
 
 {% block pageTitle %}
-GOV.UK Prototype Kit
+Event saved - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
