--- a/app/views/notes-tool-3-0/event-date.html
+++ b/app/views/notes-tool-3-0/event-date.html
@@ -1,6 +1,11 @@
 
 {% extends "./layout_no-gov.html" %}
 
+
+{% block pageTitle %}
+Event date - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 
