--- a/app/views/notes-tool-3-0/not-built-yet.html
+++ b/app/views/notes-tool-3-0/not-built-yet.html
@@ -1,6 +1,10 @@
 
 {% extends "./layout_no-gov.html" %}
 
+{% block pageTitle %}
+This page has not been built yet - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 
