--- a/app/views/notes-tool-3-0/add-family-member.html
+++ b/app/views/notes-tool-3-0/add-family-member.html
@@ -1,6 +1,10 @@
 
 {% extends "./layout_no-gov.html" %}
 
+{% block pageTitle %}
+Select family members - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 
