--- a/app/views/notes-tool-3-0/email-address.html
+++ b/app/views/notes-tool-3-0/email-address.html
@@ -1,6 +1,10 @@
 
 {% extends "./layout_no-gov.html" %}
 
+{% block pageTitle %}
+Sign in using your Local authority email address - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 
