--- a/app/views/notes-tool-3-0/file-upload-complete.html
+++ b/app/views/notes-tool-3-0/file-upload-complete.html
@@ -1,6 +1,10 @@
 
 {% extends "./layout_no-gov.html" %}
 
+{% block pageTitle %}
+File upload complete - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 {% endblock %}
