--- a/app/views/notes-tool-3-0/start.html
+++ b/app/views/notes-tool-3-0/start.html
@@ -1,6 +1,10 @@
 
 {% extends "./layout_no-gov.html" %}
 
+{% block pageTitle %}
+Record notes for a social work assessment - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 {% endblock %}
