--- a/app/views/notes-tool-3-0/event.html
+++ b/app/views/notes-tool-3-0/event.html
@@ -55,11 +55,15 @@
 			Attachments
 		</h2>				
 		{% if event['attachments'].length %}
-		{% for attachment in event['attachments'] %}
-		<p>
-			<img src="https://dummyimage.com/600x400/666/fff&text=Example" alt="{{attachment}}" width="100%">
-		</p>
-		{% endfor %}
+		<div class="govuk-grid-row">
+			{% for attachment in event['attachments'] %}
+			<div class="govuk-grid-column-one-half">
+				<p>
+					<a href="https://dummyimage.com/600x400/666/fff&text=Example" target="_blank"><img src="https://dummyimage.com/600x400/666/fff&text=Example" alt="{{attachment}}" width="100%"></a>
+				</p>
+			</div>
+			{% endfor %}
+		</div>
 		{% else %}
 		<p>No attachments.</p>
 		{% endif %}
