--- a/app/views/notes-tool-4-0/assessment-notes.html
+++ b/app/views/notes-tool-4-0/assessment-notes.html
@@ -57,6 +57,11 @@ Case notes for {{data['child'] or "Child A"}} - GOV.UK
 		<ol class="hmrc-timeline">
 			{% for event in data['events'] %}
 			<li class="hmrc-timeline-event">
+				{% if event.private == 'true' %}
+				<span class="govuk-tag govuk-tag--orange govuk-!-margin-bottom-2">
+					Private note
+				</span>
+				{% endif %}
 				<h2 class="hmrc-timeline-event-title govuk-heading-m govuk-!-margin-bottom-3">
 					{{event.type}}
 					<span class="hmrc-timeline-event-meta govuk-caption-m govuk-!-font-size-16">
