--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,25 @@
 			Notes tool
 		</h3>
 		<h4 class="govuk-heading-s">
+			<a href="notes-tool-4-0">Version 4-0</a>
+			<span class="govuk-caption-m">22 February 2021</span>
+		</h4>
+		<ul class="govuk-list govuk-list--bullet">
+			<li>
+				Condensed journey
+			</li>
+			<li>
+				Private notes
+			</li>
+			<li>
+				More notes fields
+			</li>
+			<li>
+				Event type select/typeahead
+			</li>
+		</ul>
+
+		<h4 class="govuk-heading-s">
 			<a href="notes-tool-3-0">Version 3-0</a>
 			<span class="govuk-caption-m">12 February 2021</span>
 		</h4>
