--- a/app/views/notes-tool-4-0/notes.html
+++ b/app/views/notes-tool-4-0/notes.html
@@ -72,6 +72,10 @@ Notes - GOV.UK
 				{
 					value: "General check in",
 					text: "General check in"
+				},
+				{
+					value: "Email",
+					text: "Email"
 				}
 				]
 			}) }}
