--- a/app/views/notes-tool-4-0/add-family-member.html
+++ b/app/views/notes-tool-4-0/add-family-member.html
@@ -28,7 +28,7 @@ Select family members - GOV.UK
 				{
 					legend: 
 					{
-						text: "Select all family members involved in this event",
+						text: "Select all siblings involved in this event",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
@@ -47,19 +47,11 @@ Select family members - GOV.UK
 					}
 				},
 				{
-					value: "Jenny Jones",
-					text: "Jenny Jones",
+					value: "Arthur White",
+					text: "Arthur White",
 					hint:
 					{
-						text: "Mum, 38 years old"
-					}
-				},
-				{
-					value: "Arthur Peters",
-					text: "Arthur Peters",
-					hint:
-					{
-						text: "Dad, 38 years old"
+						text: "Brother, 8 years old"
 					}
 				}
 				]
