--- a/app/views/notes-tool-4-0/family-members.html
+++ b/app/views/notes-tool-4-0/family-members.html
@@ -21,7 +21,7 @@ Family members - GOV.UK
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
 			<h1 class="govuk-heading-xl">
-				Family members present
+				Siblings involved
 			</h1>
 
 			{% for familyMember in data['family-members'] %}
@@ -37,7 +37,7 @@ Family members - GOV.UK
 				{
 					legend: 
 					{
-						text: "Have you finished adding family members?",
+						text: "Have you finished adding siblings?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--l govuk-!-margin-top-8"
 					}
