--- a/app/views/notes-tool-4-0/notes.html
+++ b/app/views/notes-tool-4-0/notes.html
@@ -160,7 +160,7 @@ Notes - GOV.UK
 				items: [
 				{
 					value: "true",
-					text: "Make this a private note"
+					text: "Save as draft"
 				}
 				]
 			})}}
