--- a/app/views/notes-tool-4-0/other-family-present.html
+++ b/app/views/notes-tool-4-0/other-family-present.html
@@ -27,7 +27,7 @@ Add family members - GOV.UK
 				{
 					legend: 
 					{
-						text: "Do you need to add family members to this event?",
+						text: "Do you need to add siblings to this event?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
