--- a/app/views/notes-tool-4-0/assessment-notes.html
+++ b/app/views/notes-tool-4-0/assessment-notes.html
@@ -79,7 +79,7 @@ Case notes for {{data['child'] or "Child A"}} - GOV.UK
 						{% for attachment in event['attachments'] %}
 						<div class="govuk-grid-column-one-third">
 							<p>
-								<img src="https://dummyimage.com/600x400/666/fff&text=Photo" alt="{{attachment}}" width="100%">
+								<img src="https://dummyimage.com/600x400/666/fff&text=Photo" alt="{{attachment}}" width="100%" alt="An example of a photograph attachment.">
 							</p>
 						</div>
 						{% endfor %}
