--- a/app/views/notes-tool-4-0/event.html
+++ b/app/views/notes-tool-4-0/event.html
@@ -90,7 +90,7 @@
 			{% for attachment in event['attachments'] %}
 			<div class="govuk-grid-column-one-half">
 				<p>
-					<a href="https://dummyimage.com/600x400/666/fff&text=Photo" target="_blank"><img src="https://dummyimage.com/600x400/666/fff&text=Photo" alt="{{attachment}}" width="100%" alt="An example of a photograph attachment."></a>
+					<img src="/public/images/{{attachment}}" width="100%" alt="An example of a photograph attachment.">
 				</p>
 			</div>
 			{% endfor %}
