--- a/app/views/notes-tool-4-0/notes.html
+++ b/app/views/notes-tool-4-0/notes.html
@@ -80,6 +80,10 @@ Notes - GOV.UK
 				{
 					value: "Email",
 					text: "Email"
+				},
+				{
+					value: "Text message (SMS, WhatsApp or similar)",
+					text: "Text message (SMS, WhatsApp or similar)"
 				}
 				]
 			}) }}
