--- a/app/views/notes-tool-4-0/select-case.html
+++ b/app/views/notes-tool-4-0/select-case.html
@@ -42,7 +42,7 @@ Select a child's case - GOV.UK
 					text: "Ella Jones",
 					hint:
 					{
-						text: "Born 23 January 2010 (11 years old)"
+						html: "Born 23 January 2010 (11 years old)<br>Case number: 10082716"
 					}
 				},
 				{
@@ -50,7 +50,7 @@ Select a child's case - GOV.UK
 					text: "Alex Peters",
 					hint:
 					{
-						text: "Born 1 August 2016 (4 years old)"
+						html: "Born 1 August 2016 (4 years old)<br>Case number: 10082729"
 					}
 				},
 				{
@@ -58,7 +58,7 @@ Select a child's case - GOV.UK
 					text: "Julia White",
 					hint:
 					{
-						text: "Born 3 March 2011 (9 years old)"
+						html: "Born 3 March 2011 (9 years old)<br>Case number: 10082736"
 					}
 				}
 				]
